--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "pdfjs-dist": "5.4.296",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@serwist/turbopack": "^9.5.4",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "esbuild": "^0.27.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "serwist": "^9.5.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
