--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "pdfjs-dist": "5.4.296",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "styled-components": "^6.3.9"
   },
   "devDependencies": {
     "@serwist/turbopack": "^9.5.4",
